Harmonizing description of runtime exceptions and compiler errors
* "throws a runtime exception"
* "fails to compile"

--- a/puzzlers/pzzlr-001.html
+++ b/puzzlers/pzzlr-001.html
@@ -67,7 +67,7 @@ Hi
 List[Int] = List(2, 3)
 List[Int] = List(2, 3)
 </pre>
-    and the fourth fails with a compilation error.
+and the fourth fails to compile
     </li>
   </ol>
 </div>
