--- a/puzzlers/pzzlr-007.html
+++ b/puzzlers/pzzlr-007.html
@@ -33,26 +33,21 @@ twiceC(2, square)
 twiceD(2)(square)
 </pre>
   <ol>  
-    <li id="correct-answer">
-      The first, second and third fail with compilation errors, the fourth prints:
-      <pre class="prettyprint lang-scala">
+    <li id="correct-answer">The first, second and third statements fail to compile and the fourth prints:
+<pre class="prettyprint lang-scala">
 Int = 16
 </pre>
     </li>
-    <li>
-	All four fail with compilation errors
-    </li>
-    <li>
-      The second fails with a compilation error, the first, third and fourth print:
- <pre class="prettyprint lang-scala">
+    <li>All four statements fail to compile</li>
+    <li>The second statements fails to compile and the first, third and fourth print:
+<pre class="prettyprint lang-scala">
 Int = 16
 Int = 16
 Int = 16
 </pre>
     </li>
-    <li>
-	Prints:
-      <pre class="prettyprint lang-scala">
+    <li>Prints:
+<pre class="prettyprint lang-scala">
 Int = 16
 Int = 16
 Int = 16
