--- a/puzzlers/pzzlr-016.html
+++ b/puzzlers/pzzlr-016.html
@@ -27,23 +27,19 @@ println(s2.length)
 </pre>
 
 <ol>
-
-<li>Prints:
+  <li>Prints:
 <pre class="prettyprint lang-scala">
 0
 0
 </pre>
-</li>
-
-<li>Both fail at runtime with <tt>NullPointerException</tt>s</li>
-
-<li id="correct-answer">The first fails at runtime with a <tt>NullPointerException</tt>, the second prints:
+  </li>
+  <li>Both statements throw <tt>NullPointerException</tt>s at runtime </li>
+  <li id="correct-answer">The first statement throws a <tt>NullPointerException</tt>at runtime and the second prints:
 <pre class="prettyprint lang-scala">
 8
 </pre>
-</li>
-
-<li>Both fail with compilation exceptions</li>
+  </li>
+  <li>Both statements fail to compile</li>
 </ol>
 
 </div>
