--- a/puzzlers/pzzlr-018.html
+++ b/puzzlers/pzzlr-018.html
@@ -30,26 +30,22 @@ println(value)
 </pre>
 
 <ol>
-<li id="correct-answer">Prints:
+  <li id="correct-answer">Prints:
 <pre class="prettyprint lang-scala">
 3
 </pre>
-</li>
-
-<li>Prints:
+  </li>
+  <li>Prints:
 <pre class="prettyprint lang-scala">
 4
 </pre>
-</li>
-
-<li>Prints:
+  </li>
+  <li>Prints:
 <pre class="prettyprint lang-scala">
 6
 </pre>
-</li>
-
-<li>Fails with an <tt>unreachable code</tt> compilation exception
-</li>
+  </li>
+  <li>Fails to compile with: <tt>unreachable code</tt></li>
 </ol>
 
 </div>
