--- a/puzzlers/pzzlr-032.html
+++ b/puzzlers/pzzlr-032.html
@@ -33,8 +33,8 @@ Found 10
 Found ()
 </pre>
     </li>
-    <li>Fails with a compilation exception</li>
-    <li id="correct-answer">Fails with a runtime exception</li>
+    <li>Fails to compile</li>
+    <li id="correct-answer">Throws a runtime exception</li>
   </ol>
 </div>
 <button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
