--- a/puzzlers/pzzlr-033.html
+++ b/puzzlers/pzzlr-033.html
@@ -46,7 +46,7 @@ implicitly[Printer] print implicitly[Messages].greeting
 <pre class="prettyprint lang-scala">
 Hello, world!
 </pre>
-and the second fails with a compilation error
+and the second fails to compile
     </li>
     <li>Prints:
 <pre class="prettyprint lang-scala">
