--- a/puzzlers/pzzlr-039.html
+++ b/puzzlers/pzzlr-039.html
@@ -44,7 +44,7 @@ Psst
 WrappedArray(hey, world:, 4, 2)
 </pre>
     </li>
-    <li>Fails with a compilation exception</li>
+    <li>Fails to compile</li>
   </ol>
 </div>
 <button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
