--- a/puzzlers/pzzlr-040.html
+++ b/puzzlers/pzzlr-040.html
@@ -27,7 +27,7 @@ println(numbers)
 Set(1, 2, 3)
 </pre>
     </li>
-    <li>Fails with a compilation exception</li>
+    <li>Fails to compile</li>
     <li id="correct-answer">Prints:
 <pre class="prettyprint lang-scala">
 false3
