--- a/puzzlers/pzzlr-041.html
+++ b/puzzlers/pzzlr-041.html
@@ -36,7 +36,7 @@ check(1.0 / PositiveInfinity)
 check(1.0 / NegativeInfinity)
 </pre>
   <ol>
-    <li id="correct-answer">Fails with a compilation exception</li>
+    <li id="correct-answer">Fails to compile</li>
     <li>Prints:
 <pre class="prettyprint lang-scala">
 underflow from the right
