--- a/puzzlers/pzzlr-043.html
+++ b/puzzlers/pzzlr-043.html
@@ -53,7 +53,7 @@ OldSkoolMarket main null
 100
 </pre>
     </li>
-    <li id="correct-answer">The first statement fails with a runtime exception, the second prints:
+    <li id="correct-answer">The first statement throws a runtime exception and the second prints:
 <pre class="prettyprint lang-scala">
 6
 100
@@ -67,7 +67,7 @@ OldSkoolMarket main null
 100
 </pre>
     </li>
-    <li>Both statements fail with a compilation exception</li>
+    <li>Both statements fail to compile</li>
   </ol>
 </div>
 <button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
