--- a/puzzlers/pzzlr-045.html
+++ b/puzzlers/pzzlr-045.html
@@ -40,14 +40,14 @@ new B()
 <pre class="prettyprint lang-scala">
 2
 </pre>
-and the second fails with a runtime exception
+and the second throws a runtime exception
     </li>
-    <li>The first statement fails with a compilation exception and the second prints:
+    <li>The first statement fails to compile and the second prints:
 <pre class="prettyprint lang-scala">
 2
 </pre>
     </li>
-    <li>The first statement fails with a compilation exception and the second fails with a runtime exception
+    <li>The first statement fails to compile and the second throws a runtime exception
     </li>
   </ol>
 </div>
