--- a/puzzlers/pzzlr-020.html
+++ b/puzzlers/pzzlr-020.html
@@ -28,31 +28,25 @@ invert3(v1 = 2, v2 = 1)
 </pre>
 
 <ol>
-<li>Prints:
+  <li>Prints:
 <pre class="prettyprint lang-scala">
 2, 2, 3
 2, 1, 3
 </pre>
-</li>
-
-<li id="correct-answer">The first invocation of <tt>invert3</tt> fails with a compilation error, and the second prints:
+  </li>
+  <li id="correct-answer">The first invocation of <tt>invert3</tt> fails to compile and the second prints:
 <pre class="prettyprint lang-scala">
 1, 2, 3
 </pre>
-</li>
-
-<li>The second invocation of <tt>invert3</tt> fails with a compilation error, and the first prints:
+  </li>
+  <li>The first invocation of <tt>invert3</tt> prints:
 <pre class="prettyprint lang-scala">
 2, 2, 3
 </pre>
-</li>
-
-<li>Both invocation of <tt>invert3</tt> fail with a compilation error.
-</li>
-
-
+and the second fails to compile
+  </li>
+  <li>Both invocations of <tt>invert3</tt> fail to compile</li>
 </ol>
-
 </div>
 <button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
 <div id="explanation" class="explanation" style="display:none">
