--- a/puzzlers/pzzlr-036.html
+++ b/puzzlers/pzzlr-036.html
@@ -48,7 +48,7 @@ puzzler$ Puzzled yet?
 puzzler$ Puzzled yet?
 Puzzled yet?
 </pre></li>
-     <li>Fails with a compilation exception</li>
+     <li>Fails to compile</li>
   </ol>
 </div>
 <button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
