Adding puzzler 'Partial Oddity'

--- a/about.html
+++ b/about.html
@@ -154,6 +154,7 @@
               <li><a href="/#pzzlr-049" id="pzzlr-049">Oddly Enough</a></li>
               <li><a href="/#pzzlr-050" id="pzzlr-050">Extract or Fail?</a></li>
               <li><a href="/#pzzlr-051" id="pzzlr-051">Well, In This Case...</a></li>
+              <li><a href="/#pzzlr-052" id="pzzlr-052">Partial Oddity</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
