--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
             <li><a href="#" id="pzzlr-049">Oddly Enough</a></li>
             <li><a href="#" id="pzzlr-050">Extract or Fail?</a></li>
             <li><a href="#" id="pzzlr-051">Well, In This Case...</a></li>
+            <li><a href="#" id="pzzlr-052">Partial Oddity</a></li>
             <li class="divider"></li>
           </ul>
         </div><!--/.well -->
