Clarified the descriptions of candidate answers for 'Init You, Init Me'
Based on feedback by @varju. Thanks!

--- a/puzzlers/pzzlr-010.html
+++ b/puzzlers/pzzlr-010.html
@@ -34,21 +34,21 @@ println(if (math.random > 0.5) XY.X.value else XY.Y.value)
 
 <ol>
 <li>
-Always prints:
+Prints:
 <pre class="prettyprint lang-scala">
 1
 </pre>
 </li>
 
 <li id="correct-answer">
-Always prints:
+Prints:
 <pre class="prettyprint lang-scala">
 2
 </pre>
 </li>
 
 <li>
-Nondeterministically prints either:
+Prints either:
 <pre class="prettyprint lang-scala">
 1
 </pre>
@@ -59,7 +59,7 @@ or:
 </li>
 
 <li>
-Fails with a runtime exception
+Throws a runtime exception
 </li>
 
 </ol>
