--- a/puzzlers/pzzlr-partial-func.html
+++ b/puzzlers/pzzlr-partial-func.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="https://groups.google.com/forum/?fromgroups#!topic/scala-language/p3K7HEwCXhc">Guillaume Mass&eacute;</a></td>
+      <td>Based on a suggestion by <a target="_blank" href="https://github.com/MasseGuillaume">Guillaume Mass&eacute;</a></td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
