--- a/puzzlers/pzzlr-046.html
+++ b/puzzlers/pzzlr-046.html
@@ -73,7 +73,7 @@
     The implicit view that enables the <tt>Any</tt> to <tt>String</tt> conversion, <a href="http://www.scala-lang.org/api/current/index.html#scala.Predef$" target="_blank"><tt>Predef.any2stringadd</tt></a>, is provided for interoperability with Java. Due to its ability to cause unexpected effects such as this one, it continues to provoke <a href="https://groups.google.com/d/topic/scala-user/Mbtp_Cq6zKI/discussion" target="_blank">lively</a> <a href="https://issues.scala-lang.org/browse/SI-194" target="_blank">debate</a>. For example, it is one of the default &quot;warts&quot; flagged by <a href="https://github.com/typelevel/wartremover" target="_blank">WartRemover</a>, a Scala code analysis tool.
   </p>
   <p>
-    In compiled classes, as well is in the REPL when using <tt>:paste -raw</tt>, you can disable this view &ndash; or any other implicit, for that matter &ndash; by adding the following import as the first (yes, it <a href="https://groups.google.com/d/msg/scala-user/VtkpIZAu18g/-QxY2JyQyUUJ" target="_blank">must be</a> <a href="http://stackoverflow.com/questions/7634015/scala-predef-unimport#comment34150585_7634858" target="_blank">the first</a>) line of your program:
+    In compiled classes, as well is in the REPL when using <tt>:paste -raw</tt>, you can disable this view &ndash; or any other implicit, for that matter &ndash; by adding the following import as the first (yes, it <a href="https://groups.google.com/d/msg/scala-user/VtkpIZAu18g/-QxY2JyQyUUJ" target="_blank">must be</a> <a href="http://stackoverflow.com/questions/7634015/scala-predef-unimport#comment34150585_7634858" target="_blank">the first</a>) line of your source file:
 <pre class="prettyprint lang-scala">
 import Predef.{any2stringadd => _, _}
 </pre>
