'unintuitive' -> 'non-intuitive' in the intro text
'Unintuitive' isn't, er, a word...

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                   Prepare to be surprised, entertained and...well, puzzled! What
                   is presented here is a selection of seemingly simple examples
                   which demonstrate that there's plenty of head-scratching left in
-                  Scala. Let your mind be challenged by unexpected and unintuitive
+                  Scala. Let your mind be challenged by unexpected and non-intuitive
                   behaviour and results and learn something in the process.
                 </p>
                 <p><br/>
