--- a/index.html
+++ b/index.html
@@ -203,28 +203,43 @@
                 </h1>
                 <p>
                   Welcome to Scala Puzzlers, the collection of <i>Traps, Pitfalls
-                  and Corner Cases</i> in the Scala language.
+                  and Corner Cases</i> in the Scala language.</br></br>
                 </p>
-                <p><br/>
-                  Prepare to be surprised, entertained and...well, puzzled! What
-                  is presented here is a selection of seemingly simple examples
-                  which demonstrate that there's plenty of head-scratching left in
-                  Scala. Let your mind be challenged by unexpected and non-intuitive
-                  behaviour and results and learn something in the process.
-                </p>
-                <p><br/>
-                  What is a puzzler? It should be:
-                  <ul>
-                    <li>an intentional language feature (so no bugs)</li>
-                    <li>not just weird because the reader doesn't know Scala</li>
-                    <li>&quot;surprising&quot; or &quot;non-intuitive&quot; to a 
-                    reasonably skilled Scala developer</li>
-                  </ul>
-                </p>
-                <p><br/>
-                  Choose a puzzler from the left-hand list to get started!
-                </p>
-              </div>
+              
+                <div class="row-fluid">
+                  <div class="span8 headline-unit yellow-background">
+                	  <p>
+						  Prepare to be surprised, entertained and...well, puzzled!<br/>
+						  What is presented here is a selection of seemingly simple examples
+						  which demonstrate that there's plenty of head-scratching left in
+						  Scala.<br/> Let your mind be challenged by unexpected and non-intuitive
+						  behaviour and results and learn something in the process.
+                	  </p>
+					  <p>
+						  What is a puzzler? It should be:
+						  <ul>
+							  <li>an intentional language feature (so no bugs)</li>
+							  <li>not just weird because the reader doesn't know Scala</li>
+							  <li>&quot;surprising&quot; or &quot;non-intuitive&quot; to a 
+								  reasonably skilled Scala developer</li>
+						  </ul>
+                	  </p>
+                	  <p>
+						  Choose a puzzler from the left-hand list to get started!
+					  </p>
+                  </div>
+                  <div class="span4 headline-unit yellow-background" style="text-align:center">
+					  <h2>Get the book!</h2>
+					  <a href="http://www.artima.com/shop/scala_puzzlers">
+						  <img src="img/scala-puzzlers-book.jpeg" height="220" width="166" alt="Scala Puzzlers book">
+					  </a>
+                	  <p>
+						  for detailed explanations, discussion and workarounds
+					  </p>					  
+                  </div>				  
+				</div>
+			  </div><!--/headline-->
+              
               <div class="row-fluid">
                 <div class="span6 headline-unit">
                   <h2>Your contributions are welcomed</h2>
