--- a/index.html
+++ b/index.html
@@ -228,12 +228,12 @@
                   </p>
                 </div>
                 <div class="span4 headline-unit yellow-background" style="text-align:center">
-                  <h2>Get the book!</h2>
+                  <h2><a href="http://www.artima.com/shop/scala_puzzlers">Get the book!</a></h2>
                   <a href="http://www.artima.com/shop/scala_puzzlers">
-                    <img src="img/scala-puzzlers-book.jpeg" height="220" width="166" alt="Scala Puzzlers book">
+                    <img class="book-image" src="img/scala-puzzlers-book.jpeg" height="220" width="166" alt="Scala Puzzlers book">
                   </a>
                   <p>
-                    for detailed explanations, discussion and workarounds
+                    In-depth explanations, workarounds and more...
                   </p>            
                 </div>          
               </div>
