Trying the book teaser without background

--- a/index.html
+++ b/index.html
@@ -227,10 +227,10 @@
                     Choose a puzzler from the left-hand list to get started!
                   </p>
                 </div>
-                <div class="span4 headline-unit yellow-background" style="text-align:center">
+                <div class="span4 headline-unit book-teaser">
                   <h2><a href="http://www.artima.com/shop/scala_puzzlers">Get the book!</a></h2>
                   <a href="http://www.artima.com/shop/scala_puzzlers">
-                    <img class="book-image" src="img/scala-puzzlers-book.jpeg" height="220" width="166" alt="Scala Puzzlers book">
+                    <img class="book-cover" src="img/scala-puzzlers-book.jpeg" height="220" width="166" alt="Scala Puzzlers book">
                   </a>
                   <p>
                     In-depth explanations, workarounds and more...
