--- a/puzzlers/pzzlr-case-defaults.html
+++ b/puzzlers/pzzlr-case-defaults.html
@@ -60,7 +60,7 @@ and the second throws a runtime exception
     The <tt>this</tt> in <tt>this.toString</tt> (the value of the default argument
     for <tt>squeezeMsg</tt>) does not refer to the instance of <tt>Toy</tt> being
     created, however. Instead, it resolves to the instance of the class or object
-    that is invoking <tt>Toy</tt>'s constructor.
+    in which <tt>Toy</tt>'s constructor is defined.
   </p>
   <p>
     When running the example in the REPL, the class or object invoking the
@@ -69,9 +69,9 @@ and the second throws a runtime exception
 scala> println(new Toy())
 $line46.$read$$iw$$iw$@7335aa7c
 </pre>
-    When creating a new instance using the generated factory method, however, the
-    class or object invoking the constructor is actually the companion object
-    <tt>Toy</tt>:
+    When creating a new <tt>Toy</tt> instance using the standard factory method
+    generated for case classes, however, the class or object invoking <tt>Toy</tt>'s
+    constructor is actually the companion object <tt>Toy</tt>:
 <pre class="prettyprint lang-scala">
 scala> println(Toy())
 Toy
