Adding puzzler 'Think of 1 Card'

--- a/about.html
+++ b/about.html
@@ -156,6 +156,7 @@
               <li><a href="/#pzzlr-051" id="pzzlr-051">Well, In This Case...</a></li>
               <li><a href="/#pzzlr-052" id="pzzlr-052">Partial Oddity</a></li>
               <li><a href="/#pzzlr-053" id="pzzlr-053">Trial and Error</a></li>
+              <li><a href="/#pzzlr-054" id="pzzlr-054">Think of 1 Card</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
