--- a/contribute.html
+++ b/contribute.html
@@ -153,6 +153,7 @@
               <li><a href="/#pzzlr-048" id="pzzlr-048">One, Two, Skip a Few</a></li>
               <li><a href="/#pzzlr-049" id="pzzlr-049">Oddly Enough</a></li>
               <li><a href="/#pzzlr-050" id="pzzlr-050">Extract or Fail?</a></li>
+              <li><a href="/#pzzlr-051" id="pzzlr-051">Well, In This Case...</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
