Changing the code sample for 'Think of 1 Card' to make one of the candidate answers a little more puzzling (and hence more plausible)

--- a/puzzlers/pzzlr-054.html
+++ b/puzzlers/pzzlr-054.html
@@ -24,7 +24,7 @@ case class Card(number: Int, suit: String = "clubs") {
   val value = (number % 13) + 1 // ace = 1, king = 13
   def isInDeck(implicit deck: List[Card]) = deck contains this
 }
-implicit val deck = List(Card(1, "spades"))
+implicit val deck = List(Card(1, "clubs"))
 implicit def intToCard(n: Int) = Card(n)
 
 println(1.isInDeck)
