Updating book links to use relative links on the site

--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
                   </p>
                 </div>
                 <div class="span4 headline-unit book-teaser" style="text-align:center">
-                  <h2><a href="http://www.artima.com/shop/scala_puzzlers">Get the book!</a></h2>
-                  <a href="http://www.artima.com/shop/scala_puzzlers">
+                  <h2><a href="/buy-the-book">Get the book!</a></h2>
+                  <a href="/buy-the-book">
                     <img class="book-cover" src="img/scala-puzzlers-book.jpg" height="220" width="166" alt="Scala Puzzlers book">
                   </a>
                   <p>
