Aligning description of runtime exceptions and minor formatting cleanup
"fails with ..." -> "throws ..."

--- a/puzzlers/pzzlr-002.html
+++ b/puzzlers/pzzlr-002.html
@@ -46,7 +46,8 @@ j: 4
   <p>
 	The former is an assignment of a tuple which is not type correct. 
 	The latter is a pattern match which for which type information is 
-	erased, so it will compile (with a warning) but fail at runtime.
+	erased, so it will compile (with a warning) but throw an exception
+	at runtime.
   </p>
   <p>
   Using a typed pattern (SLS &sect;8.1.2) instead of a variable pattern
