--- a/puzzlers/pzzlr-027.html
+++ b/puzzlers/pzzlr-027.html
@@ -44,10 +44,10 @@ U go now.***********
 <pre class="prettyprint lang-scala">
 Hello, kitteh!*
 </pre>
-	and the second one fails with a runtime exception
+	and the second one throws a runtime exception
 </li>
 <li>
-	The first one fails with a runtime exception and the second one prints:
+	The first one throws a runtime exception and the second one prints:
 <pre class="prettyprint lang-scala">
 U go now.***********
 </pre></li>
