--- a/puzzlers/pzzlr-029.html
+++ b/puzzlers/pzzlr-029.html
@@ -30,7 +30,7 @@ println(b.x)
 val bX = b.x
 println(bX)
 </pre>
-  <ol><li>The first fails at runtime with a NullPointerException, the second prints:
+  <ol><li>The first throws a <tt>NullPointerException</tt> at runtime, the second prints:
 <pre class="prettyprint lang-scala">
 0
 </pre>
