--- a/puzzlers/pzzlr-042.html
+++ b/puzzlers/pzzlr-042.html
@@ -35,16 +35,16 @@ No superheros here. Keep looking.
 No monsters here. Lucky you.
 No superheros here. Keep looking.
 </pre>
-the fourth fails with a runtime exception
+the fourth throws a runtime exception
     </li>
     <li>The first and second statements print:
 <pre class="prettyprint lang-scala">
 No superheros here. Keep looking.
 No monsters here. Lucky you.
 </pre>
-the third and fourth fail with a runtime exception
+the third and fourth throw runtime exceptions
     </li>
-    <li>All four statements fail with a runtime exception</li>
+    <li>All four statements throw runtime exceptions</li>
     <li>Prints:
 <pre class="prettyprint lang-scala">
 No superheros here. Keep looking.
