Adding puzzler 'Splitting Headache'

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
             <li><a href="#" id="pzzlr-052">Partial Oddity</a></li>
             <li><a href="#" id="pzzlr-053">Trial and Error</a></li>
             <li><a href="#" id="pzzlr-054">Think of 1 Card</a></li>
+            <li><a href="#" id="pzzlr-055">Splitting Headache</a></li>
             <li class="divider"></li>
           </ul>
         </div><!--/.well -->
