--- a/contact.html
+++ b/contact.html
@@ -157,6 +157,7 @@
               <li><a href="/#pzzlr-052" id="pzzlr-052">Partial Oddity</a></li>
               <li><a href="/#pzzlr-053" id="pzzlr-053">Trial and Error</a></li>
               <li><a href="/#pzzlr-054" id="pzzlr-054">Think of 1 Card</a></li>
+              <li><a href="/#pzzlr-055" id="pzzlr-055">Splitting Headache</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
