--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
             <li><a href="#" id="pzzlr-057">Applied Values</a></li>
             <li><a href="#" id="pzzlr-058">The Branch Not Taken</a></li>
             <li><a href="#" id="pzzlr-059">A Result, Finally!</a></li>
+            <li><a href="#" id="pzzlr-060">Unary Quandary</a></li>
             <li class="divider"></li>
           </ul>
         </div><!--/.well -->
