--- a/contribute.html
+++ b/contribute.html
@@ -162,6 +162,7 @@
               <li><a href="/#pzzlr-057" id="pzzlr-057">Applied Values</a></li>
               <li><a href="/#pzzlr-058" id="pzzlr-058">The Branch Not Taken</a></li>
               <li><a href="/#pzzlr-059" id="pzzlr-059">A Result, Finally!</a></li>
+              <li><a href="/#pzzlr-060" id="pzzlr-060">Unary Quandary</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
