Adding puzzler 59: 'A Result, Finally!'
Based on https://github.com/scalapuzzlers/scalapuzzlers.github.com/pull/106
submitted by @dgruntz

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
             <li><a href="#" id="pzzlr-056">An Exceptional Future</a></li>
             <li><a href="#" id="pzzlr-057">Applied Values</a></li>
             <li><a href="#" id="pzzlr-058">The Branch Not Taken</a></li>
+            <li><a href="#" id="pzzlr-059">A Result, Finally!</a></li>
             <li class="divider"></li>
           </ul>
         </div><!--/.well -->
