--- a/contact.html
+++ b/contact.html
@@ -161,6 +161,7 @@
               <li><a href="/#pzzlr-056" id="pzzlr-056">An Exceptional Future</a></li>
               <li><a href="/#pzzlr-057" id="pzzlr-057">Applied Values</a></li>
               <li><a href="/#pzzlr-058" id="pzzlr-058">The Branch Not Taken</a></li>
+              <li><a href="/#pzzlr-059" id="pzzlr-059">A Result, Finally!</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
