Adding puzzler 'The Branch Not Taken'

--- a/about.html
+++ b/about.html
@@ -160,6 +160,7 @@
               <li><a href="/#pzzlr-055" id="pzzlr-055">Splitting Headache</a></li>
               <li><a href="/#pzzlr-056" id="pzzlr-056">An Exceptional Future</a></li>
               <li><a href="/#pzzlr-057" id="pzzlr-057">Applied Values</a></li>
+              <li><a href="/#pzzlr-058" id="pzzlr-058">The Branch Not Taken</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
