--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
             <li><a href="#" id="pzzlr-055">Splitting Headache</a></li>
             <li><a href="#" id="pzzlr-056">An Exceptional Future</a></li>
             <li><a href="#" id="pzzlr-057">Applied Values</a></li>
+            <li><a href="#" id="pzzlr-058">The Branch Not Taken</a></li>
             <li class="divider"></li>
           </ul>
         </div><!--/.well -->
