--- a/contribute.html
+++ b/contribute.html
@@ -159,6 +159,7 @@
               <li><a href="/#pzzlr-054" id="pzzlr-054">Think of 1 Card</a></li>
               <li><a href="/#pzzlr-055" id="pzzlr-055">Splitting Headache</a></li>
               <li><a href="/#pzzlr-056" id="pzzlr-056">An Exceptional Future</a></li>
+              <li><a href="/#pzzlr-057" id="pzzlr-057">Applied Values</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
