--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
             <li><a href="#" id="pzzlr-054">Think of 1 Card</a></li>
             <li><a href="#" id="pzzlr-055">Splitting Headache</a></li>
             <li><a href="#" id="pzzlr-056">An Exceptional Future</a></li>
+            <li><a href="#" id="pzzlr-057">Applied Values</a></li>
             <li class="divider"></li>
           </ul>
         </div><!--/.well -->
