--- a/puzzlers/pzzlr-56.html
+++ b/puzzlers/pzzlr-56.html
@@ -49,6 +49,12 @@ println(error)
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
-    scala.concurrent.Future attempts to catch and box Errors thrown from a Future's computation, turning our initial Future.failed(java.lang.Error("bad things")) into a Future.failed(java.util.concurrent.ExecutionException("Boxed Error", java.lang.Error("bad things"))). ExecutionException, to no surprise, an Exception, so recoverWith's partial function matches and recovers to a Future.successful. Then, Scala tries to match the result against Some(Failure(_)), fails because oops.value is really Some(Success("tis but a flesh wound")), and throws scala.MatchError: Some(Success(tis but a flesh wound)) (of class scala.Some).
+    scala.concurrent.Future attempts to catch and box Errors thrown from a Future's computation,
+    turning our initial Future.failed(java.lang.Error("bad things")) into a
+    Future.failed(java.util.concurrent.ExecutionException("Boxed Error", java.lang.Error("bad things"))).
+
+    ExecutionException, to no surprise, is an Exception, so recoverWith's partial function matches and recovers to a Future.successful.
+    Then, when Scala tries to match the result against Some(Failure(_)), it fails because oops.value is really Some(Success("tis but a flesh wound")).
+    So in the end, Scala throws scala.MatchError: Some(Success(tis but a flesh wound)) (of class scala.Some).
   </p>
 </div>
