Adding puzzler 68: 'For Each Step...'

--- a/about.html
+++ b/about.html
@@ -170,6 +170,7 @@
               <li><a href="/#pzzlr-065" id="pzzlr-065">A Matter of Context</a></li>
               <li><a href="/#pzzlr-066" id="pzzlr-066">Inference Hindrance</a></li>
               <li><a href="/#pzzlr-067" id="pzzlr-067">Inconstant Constants</a></li>
+              <li><a href="/#pzzlr-068" id="pzzlr-068">For Each Step...</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
