--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
             <li><a href="#" id="pzzlr-065">A Matter of Context</a></li>
             <li><a href="#" id="pzzlr-066">Inference Hindrance</a></li>
             <li><a href="#" id="pzzlr-067">Inconstant Constants</a></li>
+            <li><a href="#" id="pzzlr-068">For Each Step...</a></li>
             <li class="divider"></li>
           </ul>
         </div><!--/.well -->
