--- a/contribute.html
+++ b/contribute.html
@@ -158,6 +158,7 @@
               <li><a href="/#pzzlr-053" id="pzzlr-053">Trial and Error</a></li>
               <li><a href="/#pzzlr-054" id="pzzlr-054">Think of 1 Card</a></li>
               <li><a href="/#pzzlr-055" id="pzzlr-055">Splitting Headache</a></li>
+              <li><a href="/#pzzlr-056" id="pzzlr-056">An Exceptional Future</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
