Adding a source for puzzler 'Applied Values'
See https://github.com/scalapuzzlers/scalapuzzlers.github.com/issues/125#issuecomment-121139713

--- a/puzzlers/pzzlr-057.html
+++ b/puzzlers/pzzlr-057.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td>N/A</td>
+      <td><a href="https://gitter.im/scala/scala?at=556e2d86777c17d06a13a90f" target="_blank">scala/scala Gitter channel</a></td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
