Clarifying that the *numeric* value of '5' is 53 in 'The Branch Not Taken'

--- a/puzzlers/pzzlr-058.html
+++ b/puzzlers/pzzlr-058.html
@@ -66,8 +66,8 @@ and the second fails to compile</li>
     number types. These have a hierarchy, even though they are not sub- or
     supertypes of each other. In this hierarchy, <tt>Float</tt> ranks higher
     than <tt>Char</tt> (also a numeric type), so the overall type of
-    the <tt>if</tt> statement is <tt>Float</tt>. The value of the character
-    '5' is the value of its ASCII representation, 53, or 53.0 as a
+    the <tt>if</tt> statement is <tt>Float</tt>. The numeric value of the
+    character '5' is the value of its ASCII representation, 53, or 53.0 as a
     <tt>Float</tt>.
   </p>
   <p>
