Adding puzzler 64: 'Traversing Travesty'
Suggested by @marconilanna. Thanks, Marconi!

--- a/about.html
+++ b/about.html
@@ -166,6 +166,7 @@
               <li><a href="/#pzzlr-061" id="pzzlr-061">Heads You Win...</a></li>
               <li><a href="/#pzzlr-062" id="pzzlr-062">Identity Crisis</a></li>
               <li><a href="/#pzzlr-063" id="pzzlr-063">(Ex)Stream Surprise</a></li>
+              <li><a href="/#pzzlr-064" id="pzzlr-064">Traversing Travesty</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
