Harmonizing links in the puzzler 'Source' attribution
Linking only where the link points to the direct source of the puzzler,
not generally to the person making the suggestion

--- a/puzzlers/pzzlr-013.html
+++ b/puzzlers/pzzlr-013.html
@@ -9,7 +9,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td>Based on a suggestion by <a target="_blank" href="http://www.schmitztech.com/">Michael Schmitz</a></td>
+      <td>Based on a suggestion by Michael Schmitz</td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
