--- a/puzzlers/pzzlr-059.html
+++ b/puzzlers/pzzlr-059.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td>Based on a suggestion by <a target="_blank" href="https://github.com/dgruntz">Dominik Gruntz</a></td>
+      <td>Based on a suggestion by Dominik Gruntz</td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
