--- a/puzzlers/pzzlr-052.html
+++ b/puzzlers/pzzlr-052.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td>Based on a suggestion by <a target="_blank" href="https://github.com/MasseGuillaume">Guillaume Mass&eacute;</a></td>
+      <td>Based on a suggestion by Guillaume Mass&eacute;</td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
