--- a/puzzlers/pzzlr-054.html
+++ b/puzzlers/pzzlr-054.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td>Based on a suggestion by <a target="_blank" href="https://github.com/Alefas">Alexander Podkhalyuzin</a></td>
+      <td>Based on a suggestion by Alexander Podkhalyuzin</td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
