Adding a link to (a saved copy of) Paul Phillips' scala-faq

--- a/puzzlers/pzzlr-005.html
+++ b/puzzlers/pzzlr-005.html
@@ -9,7 +9,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td>Paul Phillips' scala-faq</td>
+      <td>Paul Phillips' <a target="_blank" href="https://github.com/scala/scala.github.com/blob/890996bf6110df9e91cbd7cdbde5ff3f425afc9f/tutorials/FAQ/initialization-order.md">scala-faq</a></td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
