Cleaning up some spacing in the candidate answers

--- a/puzzlers/pzzlr-identity-puzzler.html
+++ b/puzzlers/pzzlr-identity-puzzler.html
@@ -25,8 +25,7 @@ println(someNumbers flatMap { identity(_) })
 println(someNumbers flatMap { identity })
 </pre>
   <ol>
-    <li>All three statements fail to compile
-    </li>
+    <li>All three statements fail to compile</li>
     <li id="correct-answer">The first two statements print:
 <pre class="prettyprint lang-scala">
 List(42, 17)
