--- a/puzzlers/pzzlr-another-for-value-def-puzzler.html
+++ b/puzzlers/pzzlr-another-for-value-def-puzzler.html
@@ -18,62 +18,71 @@
 <div class="code-snippet">
   <h3>What is the result of executing the following code?</h3>
 <pre class="prettyprint lang-scala">
-def sumsTo1Traversable(numbers: TraversableOnce[Int]) = 
-  for {
-      x <- numbers
-      _ = println("DEBUG 1: x: " + x)
-      y <- x to 1
-  } println(x + y)
+val numberNames = Map(1 -> "one", 2 -> "two")
 
-def sumsTo1Iterable(numbers: Iterable[Int]) = 
-  for {
-      x <- numbers
-      _ = println("DEBUG 1: x: " + x)
-      y <- x to 1
-  } println(x + y)
+def pingpongIterable(numbers: Iterable[Int]) = numbers map {
+    num => println("Ping-i " + num); numberNames(num)
+  } foreach {
+    name => println("Pong-i " + name)
+  }
 
-sumsTo1Traversable(1 to 2)
-sumsTo1Iterable(1 to 2)
+def pingpongTraversable(numbers: TraversableOnce[Int]) = numbers map {
+    num => println("Ping-t " + num); numberNames(num)
+  } foreach {
+    name => println("Pong-t " + name)
+  }
+
+pingpongIterable(1 to 2)
+pingpongTraversable(1 to 2)
 </pre>
   <ol>
     <li>Prints:
 <pre class="prettyprint lang-scala">
-DEBUG 1: x: 1
-2
-DEBUG 1: x: 2
-DEBUG 2: x: 1
-2
-DEBUG 2: x: 2
+Ping-i 1
+Pong-i one
+Ping-i 2
+Pong-i two
+
+Ping-t 1
+Pong-t one
+Ping-t 2
+Pong-t two
 </pre>
     </li>
     <li>Prints:
 <pre class="prettyprint lang-scala">
-DEBUG 1: x: 1
-2
-DEBUG 2: x: 1
-2
-DEBUG 2: x: 2
+Ping-i 1
+Ping-i 2
+Pong-i one
+Pong-i two
+
+Ping-t 1
+Ping-t 2
+Pong-t one
+Pong-t two
 </pre>
     </li>
     <li id="correct-answer">Prints:
 <pre class="prettyprint lang-scala">
-DEBUG 1: x: 1
-2
-DEBUG 1: x: 2
-DEBUG 2: x: 1
-DEBUG 2: x: 2
-2
+Ping-i 1
+Ping-i 2
+Pong-i one
+Pong-i two
+
+Ping-t 1
+Pong-t one
+Ping-t 2
+Pong-t two
 </pre>
     </li>
-    <li>Prints:
+    <li>The first statement prints:
 <pre class="prettyprint lang-scala">
-DEBUG 1: x: 1
-DEBUG 1: x: 2
-2
-DEBUG 2: x: 1
-DEBUG 2: x: 2
-2
+Ping-i 1
+Pong-i one
+Ping-i 2
+Pong-i two
 </pre>
+and the second throws a runtime exception
     </li>
   </ol>
 </div>
@@ -81,54 +90,34 @@ DEBUG 2: x: 2
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
-    Multiple generators in for comprehensions and for loops result in nested
-    invocations of <tt>flatMap</tt> (SLS &sect;6.19):
-<pre class="prettyprint lang-scala">
-for { 
-    a <- expr1
-    b <- expr2
-    ...
-}
-</pre>
-    is desugared to code equivalent to:
-<pre class="prettyprint lang-scala">
-expr1 flatMap { a => expr2 flatMap ... }
-</pre>
+    Method <tt>map</tt> on <tt>Iterable</tt>, which is inherited by the
+    <tt>Range</tt> class, returns a new collection created by applying the
+    provided function to each element in the original iterable. In
+    <tt>pingpongIterable</tt>, each element of the range <tt>numbers</tt> is
+    retrieved, and <tt>&quot;Ping-i&quot;</tt> printed for it, before the
+    method <tt>foreach</tt> is called.
   </p>
   <p>
-    This means that the statements of the second generator &ndash;
-    in the first example, <tt>println("DEBUG 1: x: " + x); 1 to 1</tt>
-    &ndash; are executed whenever the first generator moves on to the next
-    element. This happens only <em>after</em> the current element has been
-    passed &quot;all the way through&quot; the for expression. In the case of
-    the first example, this means that the debugging statement when
-    <tt>x</tt> has the value 2 is printed only after the statement
-    <tt>println(x + y)</tt> has been executed for <tt>x == 1</tt>.
+    The trait <tt>TraversableOnce</tt>, on the other hand, does not define a
+    <tt>map</tt> method, so <tt>Range</tt>'s implementation of <tt>map</tt>
+    (inherited from <tt>TraversableLike</tt>) is never invoked. The reason
+    <tt>map</tt> can be called on <tt>TraversableOnce</tt> is due to an
+    implicit conversion to <a href="http://www.scala-lang.org/api/current/index.html#scala.collection.TraversableOnce$$MonadOps" target="_blank">
+    <tt>TraversableOnce.MonadOps</tt></a> &ndash; in
+    <tt>pingpongTraversable</tt>, the invocation of <tt>numbers.map</tt> is
+    transformed into code equivalent to <tt>MonadOps(numbers) map ...</tt>.
   </p>
   <p>
-    Value definitions, on the other hand, effectively result in a 
-    &quot;transformation&quot; of the generator to which they are associated 
-    (SLS &sect;6.19):
-<pre class="prettyprint lang-scala">
-for { 
-    a <- expr1
-    v = vexpr
-    b <- expr2
-    ...
-}
-</pre>
-  is desugared to code equivalent to:
-<pre class="prettyprint lang-scala">
-expr1 map { a => (a, vexpr) } flatMap { case (a, v) => expr2 flatMap ... }
-</pre>
+    The method <tt>MonadOps.map</tt> is implemented by converting the
+    traversable to an <tt>Iterator</tt> and calling <tt>map</tt> on that.
+    As per <a href="http://www.scala-lang.org/api/current/index.html#scala.collection.Iterator@map[B](f:A=>B):Iterator[B]" target="_blank">the documentation</a>, this returns
+    a new <strong>iterator</strong> which transforms every value produced by
+    the orginal iterator by applying the specified function <em>when the value
+    is requested</em>.
   </p>
   <p>
-    The the right-hand side expression of the value definition is executed
-    for each element of the first generator <em>before</em> the elements of
-    the generator are passed through to the remainder of the for expression.
-    In the second example, this means that the debugging statements are
-    executed for each element of the expression <tt>1 to 2</tt> before the
-    first execution (i.e. when <tt>x</tt> has the value 1) of the statement
-    <tt>println(x + y)</tt>.
+    In the case of <tt>pingpongTraversable</tt>, therefore, the
+    <tt>&quot;Ping-t&quot;</tt> statements are printed only when successive
+    elements of the collection are retrieved in the <tt>foreach</tt> block.
   </p>
 </div>
